# OpenGLTemplate

./: .gitignore  CMakeLists.txt  main.cpp  main.h
glad/include/glad/: glad.h
glad/src/: glad.c
